--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,8 @@
     <string name="action_settings">Settings</string>
     <string name="access_token">pk.eyJ1IjoiZ2VyZ2VseXN6IiwiYSI6ImNqcHY2OG9iYTBtZWE0M3MyMWltb29xa3AifQ.SdvjAK1YxFd8169Go7Ip6w</string>
     <string name="user_location_permission_not_granted">User location permission not granted!</string>
+    <string name="user_data_upload_success">User data uploaded to database, user ID:</string>
+    <string name="user_data_upload_fail_details">User data upload failed! Details:</string>
+    <string name="creating_bus_stations_markers">creating bus stations markers</string>
+    <string name="created_bus_station_marker">created bus stations marker</string>
 </resources>
