--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,43 @@
     <string name="user_data_upload_fail_details">User data upload failed! Details:</string>
     <string name="creating_bus_stations_markers">creating bus stations markers</string>
     <string name="created_bus_station_marker">created bus stations marker</string>
+    <string name="route_added">Route added!</string>
+    <string name="route_configured">Route configured!</string>
+    <string name="no_routes_found">No routes found</string>
+    <string name="apply">Apply</string>
+    <string name="current_status">Current status:</string>
+    <string name="closest_station">Closest station:</string>
+    <string name="user_id">User ID:</string>
+    <string name="current_speed">Current speed:</string>
+    <string name="select_station">Select station</string>
+    <string name="offline_bus_program">Offline bus program</string>
+    <string name="change_status_and_or_bus">Change status and/or bus</string>
+    <string name="set_up_route">Set up route</string>
+    <string-array name="bus_numbers">
+        <item>1</item>
+        <item>2</item>
+        <item>2b</item>
+        <item>2e</item>
+        <item>3</item>
+        <item>4</item>
+        <item>6</item>
+        <item>10</item>
+        <item>10b</item>
+        <item>12</item>
+        <item>14</item>
+        <item>16</item>
+        <item>17</item>
+        <item>18</item>
+        <item>19</item>
+        <item>20</item>
+        <item>21</item>
+        <item>23</item>
+        <item>26</item>
+        <item>27</item>
+        <item>30</item>
+        <item>30b</item>
+        <item>32</item>
+        <item>43</item>
+        <item>44</item>
+    </string-array>
 </resources>
