--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">BusTrack</string>
+    <string name="app_name">BusTracker</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_title">Android Studio</string>
@@ -16,8 +16,8 @@
     <string name="route_configured">Route configured!</string>
     <string name="no_routes_found">No routes found</string>
     <string name="apply">Apply</string>
-    <string name="current_status">Current status:</string>
-    <string name="closest_station">Closest station:</string>
+    <string name="current_status">Current status: </string>
+    <string name="closest_station">Closest station: </string>
     <string name="user_id">User ID:</string>
     <string name="current_speed">Current speed:</string>
     <string name="select_station">Select station</string>
@@ -26,6 +26,15 @@
     <string name="set_up_route">Set up route</string>
     <string name="please_choose_your_current_status">Please choose your current status:</string>
     <string name="please_choose_your_current_bus">Please choose your current bus:</string>
+    <string name="update_data">Update data</string>
+    <string name="location_permission_needed_warning">Location permission is needed for the app</string>
+    <string name="stations_data_saved">stations data saved in file</string>
+    <string name="stations_data_save_failed">stations failed to save in file</string>
+    <string name="successfully_updated">Successfully updated!</string>
+    <string name="no_routes_access_token">No routes found, make sure you set the right user and access token.</string>
+    <string name="on_bus">on bus</string>
+    <string name="waiting_for_bus">waiting for bus</string>
+    <string name="select_the_station_where_you_want_to_go">Select the station where you want to go:</string>
     <string-array name="bus_numbers">
         <item>1</item>
         <item>2</item>
