--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -62,8 +62,8 @@
         <item>43</item>
         <item>44</item>
     </string-array>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="list_of_all_buses_heading_to">List of all buses heading to:</string>
+    <string name="show_route_for_bus">Show route for bus</string>
+    <string name="select_the_bus_to_show_it_s_route">Select the bus to show it\'s route</string>
+    <string name="couldnt_save_data_error">Couldn\'t save data! Error:</string>
 </resources>
