--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,15 +2,12 @@
     <string name="app_name" tools:ignore="PrivateResource">BusTracker</string>
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
-    <string name="nav_header_subtitle">android.studio@android.com</string>
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="access_token">pk.eyJ1IjoiZ2VyZ2VseXN6IiwiYSI6ImNqcHY2OG9iYTBtZWE0M3MyMWltb29xa3AifQ.SdvjAK1YxFd8169Go7Ip6w</string>
     <string name="user_location_permission_not_granted">User location permission not granted!</string>
     <string name="user_data_upload_success">User data uploaded to database, user ID:</string>
     <string name="user_data_upload_fail_details">User data upload failed! Details:</string>
-    <string name="creating_bus_stations_markers">creating bus stations markers</string>
-    <string name="created_bus_station_marker">created bus stations marker</string>
     <string name="route_added">Route added!</string>
     <string name="route_configured">Route configured!</string>
     <string name="no_routes_found">No routes found</string>
@@ -22,13 +19,9 @@
     <string name="select_station">Select station</string>
     <string name="offline_bus_program">Offline bus program</string>
     <string name="change_status_and_or_bus">Change status and/or bus</string>
-    <string name="set_up_route">Set up route</string>
     <string name="please_choose_your_current_status">Please choose your current status:</string>
     <string name="please_choose_your_current_bus">Please choose your current bus:</string>
     <string name="update_data">Update data</string>
-    <string name="location_permission_needed_warning">Location permission is needed for the app</string>
-    <string name="stations_data_saved">stations data saved in file</string>
-    <string name="stations_data_save_failed">stations failed to save in file</string>
     <string name="successfully_updated">Successfully updated!</string>
     <string name="no_routes_access_token">No routes found, make sure you set the right user and access token.</string>
     <string name="on_bus">on bus</string>
@@ -77,5 +70,15 @@
         <item>1000</item>
         <item>5000</item>
         <item>10000</item>
+    </string-array>
+    <string-array name="update_priority_mode">
+        <item>Low power</item>
+        <item>Balanced</item>
+        <item>High performance</item>
+    </string-array>
+    <string-array name="update_priority_mode_values">
+        <item>2</item>
+        <item>1</item>
+        <item>0</item>
     </string-array>
 </resources>
