--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,8 +24,6 @@
     <string name="update_data">Update data</string>
     <string name="successfully_updated">Successfully updated!</string>
     <string name="no_routes_access_token">No routes found, make sure you set the right user and access token.</string>
-    <string name="on_bus">on bus</string>
-    <string name="waiting_for_bus">waiting for bus</string>
     <string name="select_the_station_where_you_want_to_go">Select the station where you want to go:</string>
     <string-array name="bus_numbers">
         <item>1</item>
@@ -61,6 +59,7 @@
     <string name="firststation">FirstStation</string>
     <string name="laststation">LastStation</string>
     <string name="settings">Settings</string>
+    <string name="set_your_status_to_waiting_for_bus_other_users_won_t_see_you">Set your status to: waiting for bus. Other users won\'t see you.</string>
     <string-array name="update_frequency_options">
         <item>Fastest</item>
         <item>5 seconds</item>
