--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -55,11 +55,12 @@
     <string name="list_of_all_buses_heading_to">List of all buses heading to:</string>
     <string name="show_route_for_bus">Show route for bus</string>
     <string name="select_the_bus_to_show_it_s_route">Select the bus to show it\'s route</string>
-    <string name="couldnt_save_data_error">Couldn\'t save data! Error:</string>
     <string name="firststation">FirstStation</string>
     <string name="laststation">LastStation</string>
     <string name="settings">Settings</string>
     <string name="set_your_status_to_waiting_for_bus_other_users_won_t_see_you">Set your status to: waiting for bus. Other users won\'t see you.</string>
+    <string name="enter_the_station_name_here">Enter the station name here</string>
+    <string name="or_select_your_station_from_this_list">or select your station from this list</string>
     <string-array name="update_frequency_options">
         <item>Fastest</item>
         <item>5 seconds</item>
