--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -61,6 +61,9 @@
     <string name="set_your_status_to_waiting_for_bus_other_users_won_t_see_you">Set your status to: waiting for bus. Other users won\'t see you.</string>
     <string name="enter_the_station_name_here">Enter the station name here</string>
     <string name="or_select_your_station_from_this_list">or select your station from this list</string>
+    <string name="info_for_bus">Info for bus:</string>
+    <string name="arrives_in">Arrives in</string>
+    <string name="get_to_this_station">Get to this station:</string>
     <string-array name="update_frequency_options">
         <item>Fastest</item>
         <item>5 seconds</item>
