Update 8. Added time estimation bus the arrival of the clicked bus. Added focusing on the selected real-time bus. Code simplified, added 2 new parameters to the ListedBusData class and removed 2. Fixed when showing buses which don't go through the route where the closest stations are. Improved estimation algorithm.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -64,6 +64,8 @@
     <string name="info_for_bus">Info for bus:</string>
     <string name="arrives_in">Arrives in</string>
     <string name="get_to_this_station">Get to this station:</string>
+    <string name="real_time_bus_found">Real-time bus found!</string>
+    <string name="no_real_time_bus_found">No real-time bus found!</string>
     <string-array name="update_frequency_options">
         <item>Fastest</item>
         <item>5 seconds</item>
