--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,16 +5,15 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
     <string name="access_token">pk.eyJ1IjoiZ2VyZ2VseXN6IiwiYSI6ImNqcHY2OG9iYTBtZWE0M3MyMWltb29xa3AifQ.SdvjAK1YxFd8169Go7Ip6w</string>
-    <string name="user_data_upload_success">User data uploaded to database, user ID:</string>
     <string name="user_data_upload_fail_details">User data upload failed! Details:</string>
     <string name="route_added">Route added!</string>
     <string name="route_configured">Route configured!</string>
     <string name="no_routes_found">No routes found</string>
     <string name="apply">Apply</string>
-    <string name="current_status">Current status: </string>
-    <string name="closest_station">Closest station: %1$s</string>
-    <string name="user_id">User ID:</string>
-    <string name="current_speed">Current speed: %1$s</string>
+    <string name="current_status">Current status: %s</string>
+    <string name="closest_station">Closest station: %s</string>
+    <string name="user_id">User ID: %s</string>
+    <string name="current_speed">Current speed: %s</string>
     <string name="select_station">Select station</string>
     <string name="offline_bus_program">Offline bus program</string>
     <string name="change_status_and_or_bus">Change status and/or bus</string>
@@ -52,23 +51,26 @@
         <item>43</item>
         <item>44</item>
     </string-array>
-    <string name="list_of_all_buses_heading_to">List of all buses heading to: %1$s</string>
+    <string name="list_of_all_buses_heading_to">List of all buses heading to: %s</string>
     <string name="show_route_for_bus">Show route for bus</string>
     <string name="select_the_bus_to_show_it_s_route">Select the bus to show it\'s route</string>
-    <string name="firststation">FirstStation</string>
-    <string name="laststation">LastStation</string>
+    <string name="firstStation">FirstStation</string>
+    <string name="lastStation">LastStation</string>
     <string name="settings">Settings</string>
     <string name="set_your_status_to_waiting_for_bus_other_users_won_t_see_you">Set your status to: waiting for bus. Other users won\'t see you.</string>
     <string name="enter_the_station_name_here">Enter the station name here</string>
     <string name="or_select_your_station_from_this_list">or select your station from this list</string>
-    <string name="info_for_bus">Info for bus:</string>
-    <string name="arrives_in">Arrives in</string>
+    <string name="info_for_bus">Info for bus: %s</string>
+    <plurals name="arrives_in">
+        <item quantity="one">Arrives in %d minute.</item>
+        <item quantity="other">Arrives in %d minutes.</item>
+    </plurals>
     <string name="closest_station_to_you">Closest station to you:</string>
     <string name="real_time_bus_found">Real-time bus found!</string>
     <string name="no_real_time_bus_found">No real-time bus found!</string>
-    <string name="notification_channel_id">bustracker.ms.sapientia.ro</string>
     <string name="app_is_running_in_the_background">App is running in the background</string>
     <string name="select_bus_to_show_its_program">Select the bus to show it\'s program</string>
+    <string name="probably_left">Probably left.</string>
     <string-array name="update_frequency_options">
         <item>Fastest</item>
         <item>5 seconds</item>
