--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,12 +3,8 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
     <string name="nav_header_desc">Navigation header</string>
-    <string name="action_settings">Settings</string>
     <string name="access_token">pk.eyJ1IjoiZ2VyZ2VseXN6IiwiYSI6ImNqcHY2OG9iYTBtZWE0M3MyMWltb29xa3AifQ.SdvjAK1YxFd8169Go7Ip6w</string>
     <string name="user_data_upload_fail_details">User data upload failed! Details:</string>
-    <string name="route_added">Route added!</string>
-    <string name="route_configured">Route configured!</string>
-    <string name="no_routes_found">No routes found</string>
     <string name="apply">Apply</string>
     <string name="current_status">Current status: %s</string>
     <string name="closest_station">Closest station: %s</string>
@@ -22,7 +18,6 @@
     <string name="update_data">Update data</string>
     <string name="successfully_updated">Successfully updated!</string>
     <string name="from_where_to_where">%1$s - %2$s</string>
-    <string name="no_routes_access_token">No routes found, make sure you set the right user and access token.</string>
     <string name="select_the_station_where_you_want_to_go">Select the station where you want to go:</string>
     <string-array name="bus_numbers">
         <item>1</item>
@@ -67,7 +62,15 @@
     </plurals>
     <string name="closest_station_to_you">Closest station to you:</string>
     <string name="real_time_bus_found">Real-time bus found!</string>
-    <string name="no_real_time_bus_found">No real-time bus found!</string>
+    <plurals name="leaves_station_in_minutes">
+        <item quantity="one">Leaves %2$s\nstation in %1$d minute.</item>
+        <item quantity="other">Leaves %2$s\nstation in %1$d minutes.</item>
+    </plurals>
+    <string name="leaves_station_right_now">"Leaves %s\nstation right now."</string>
+    <plurals name="left_station_minutes_ago">
+        <item quantity="one">Left %2$s\nstation %1$d minute ago.</item>
+        <item quantity="other">Left %2$s\nstation %1$d minutes ago.</item>
+    </plurals>
     <string name="app_is_running_in_the_background">App is running in the background</string>
     <string name="select_bus_to_show_its_program">Select the bus to show it\'s program</string>
     <string name="probably_left">Probably left.</string>
